<resources>
    <string name="app_name">TodoApp</string>
    <string name="label_task_title">할일</string>
    <string name="label_set_enddt">기한설정</string>
    <string name="btn_delete">삭제</string>
    <string name="btn_set">설정</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_add">추가</string>
    <string name="hint_memo">메모</string>
    <string name="label_delete">삭제</string>
    <string name="label_save">저장</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="label_setting">설정</string>

    <string-array name="ex_title">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>

    <string-array name="ex_val">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
