<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_task_title"
        android:textColor="@color/blue_800" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etTitle"
        android:hint="Input Title" />

    <TextView
        android:text="@string/label_set_enddt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@color/blue_800"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:text="설정안됨"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDeadline"
            android:layout_weight="1" />

        <Button
            style="@style/DialogButton"
            android:text="@string/btn_delete"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeadlineDelete"
            tools:visibility="visible"
            android:visibility="gone" />

        <Button
            style="@style/DialogButton"
            android:text="@string/btn_set"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeadline"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="right"
        android:layout_marginTop="10dp">

        <Button
            style="@style/DialogButton"
            android:text="@string/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel" />

        <Button
            style="@style/DialogButton"
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd" />

    </LinearLayout>

</LinearLayout>