<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar" >

        <include layout="@layout/toolbar_task_detail" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:text="@string/label_set_enddt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/blue_800"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <TextView
                android:text="설정안됨"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDeadline"
                android:layout_weight="1" />

            <Button
                style="@style/DialogButton"
                android:text="@string/btn_delete"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnDeadlineDelete"
                tools:visibility="visible"
                android:visibility="gone" />

            <Button
                style="@style/DialogButton"
                android:text="@string/btn_set"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnDeadline"
                android:layout_weight="0" />

        </LinearLayout>
        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
            android:background="#000"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etMemo"
            android:hint="@string/hint_memo"
            android:background="@drawable/memo_bg"
            android:padding="10dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

</LinearLayout>